# routes/index.js
@@ -1,25 +1,11 @@
 const router = require("express").Router();
-const passport = require("passport");
 
 router.use("/", require("./swagger"));
 
-router.get("/", (req, res) => {
-  res.send("Hello World!");
-});
+router.use("/", require("./auth"));
 
 router.use("/movies", require("./movies"));
 
 router.use("/rockbands", require("./rockbands"));
-
-router.get("/login", passport.authenticate("github"), (req, res) => {});
-
-router.get("/logout", function (req, res, next) {
-  req.logout(function (err) {
-    if (err) {
-      return next(err);
-    }
-    res.redirect("/");
-  });
-});
 
 module.exports = router;
